[metadata]
author = Grzegorz Janik
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description= Download and keep up to date your purchases from DriveThruRPG
long_description_content_type = text/markdown
long_description = file: README.md
name = drpg
url = https://github.com/glujan/drpg
version = attr: drpg.__version__
project_urls =
    GitHub=https://github.com/glujan/drpg
    Changelog=https://github.com/glujan/drpg/blob/master/CHANGELOG.md

[bdist_wheel]
universal=1

[options]
packages = drpg
include_package_data = true
python_requires = >=3.8

[options.entry_points]
console_scripts =
    drpg = drpg.cmd:run

[options.package_data]
drpg = py.typed

[coverage:run]
branch = True
include = drpg/*
omit =
    .ropeproject,
    venv

[coverage:report]
omit =
    .ropeproject,
    venv

[flake8]
max-complexity = 10
max-line-length = 88
extend-exclude =
    .ropeproject,
    venv
