[metadata]
name = drpg
version = attr: drpg.__version__
description = Download and keep up to date your purchases from DriveThruRPG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glujan/drpg
author = Grzegorz Janik
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    GitHub=https://github.com/glujan/drpg
    Changelog=https://github.com/glujan/drpg/blob/master/CHANGELOG.md

[options]
packages = drpg
python_requires = >=3.8
include_package_data = true

[options.entry_points]
console_scripts =
    drpg = drpg.cmd:run

[options.package_data]
drpg = py.typed

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
include = drpg/*
omit =
    .ropeproject,
    venv

[coverage:report]
omit =
    .ropeproject,
    venv

[flake8]
max-complexity = 10
max-line-length = 100
extend-exclude =
    .ropeproject,
    venv
